--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "time-report-image-gen",
   "version": "1.0.0",
-  "description": "Generate a image from text",
+  "description": "Generate a image from json converted to html",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "jimp": "^0.2.28",
+    "lodash.isempty": "^4.4.0",
+    "multiline": "^1.0.2",
     "path": "^0.12.7",
-    "uuid": "^3.2.1"
+    "tableify": "^1.1.0",
+    "uuid": "^3.2.1",
+    "webshot": "^0.18.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -18,7 +23,7 @@
     "type": "git",
     "url": "git+https://github.com/peterlindstrom/time-report-image-gen.git"
   },
-  "author": "",
+  "author": "Peter Lindström",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/peterlindstrom/time-report-image-gen/issues"
